SpringbootApiServer/k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-api-server-deployment
  labels:
    app: springboot-api-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: springboot-api-server
  template:
    metadata:
      labels:
        app: springboot-api-server
    spec:
      containers:
        - name: springboot-api-server
          image: cvsudeep/springboot-api-server:latest  # Use your Docker image
          # imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
