SpringbootApiServer/k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-api-server-service
spec:
  selector:
    app: springboot-api-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
