SpringbootApiServer/k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-api-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx
  rules:
    - host: "localhost"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /api(/|$)(.*)
            backend:
              service:
                name: springboot-api-server-service
                port:
                  number: 80
